test/sema/pointer-to-rvalue-assign.cx
// RUN: %not %cx -typecheck %s | %FileCheck %s

int foo() { return 42; }

void main() {
    int*? p = null;
    // CHECK: [[@LINE+1]]:7: error: cannot assign 'int' to 'int*?'
    p = foo();
}
